--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datasets>=4.4.1",
+    "mlflow>=3.5.1",
     "numpy>=2.3.3",
     "pre-commit>=4.3.0",
+    "psutil>=7.1.3",
     "torch>=2.8.0",
+    "tqdm>=4.67.1",
     "transformers>=4.57.1",
 ]
