--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "numpy>=2.3.3",
     "pre-commit>=4.3.0",
     "psutil>=7.1.3",
+    "pyyaml==6.0.2",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.57.1",
+    "types-pyyaml>=6.0.12.20250915",
     "wandb>=0.23.0",
 ]
