added run id and artifact to config yaml to resume training runs

--- a/config/training.yaml
+++ b/config/training.yaml
@@ -4,6 +4,8 @@ run:
   artifact:
     filename: checkpoint.pt
     name: model-checkpoint
+  id: null
+  resume_artifact: null
 
 training:
   total_steps: 10
