--- a/config/training.yaml
+++ b/config/training.yaml
@@ -8,16 +8,18 @@ run:
   resume_artifact: null
 
 training:
-  total_steps: 200000
-  batch_size: 30
-  learning_rate: 0.0001
-  seq_len: 1024
+  total_steps: 50000
+  batch_size: 100
+  learning_rate: 0.0003
+  seq_len: 256
+  checkpoint_interval_steps: 5000
+  warmup_steps: 2000
 
 model:
-  d_model: 512
-  n_heads: 8
-  n_layers: 6
-  d_ff: 2048
+  d_model: 768
+  n_heads: 12
+  n_layers: 12
+  d_ff: 3072
   dropout: 0.1
 
 dataset:
